crates/swc/tests/tsc-references/nullAssignedToUndefined.1.normal.js
//// [nullAssignedToUndefined.ts]
var x = undefined1 = null; // error
var y = null; // ok, widened
